k8s-practice-exercises/Helm/tick/manifests/deploy-kapacitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapacitor
spec:
  selector:
    matchLabels:
      app: kapacitor
  template:
    metadata:
      labels:
        app: kapacitor
    spec:
      containers:
      - name: kapacitor
        image: kapacitor:1.5
