k8s-practice-exercises/Helm/tick/manifests/deploy-telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
spec:
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - image: telegraf:1.10
        name: telegraf
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf/telegraf.conf
          subPath: telegraf.conf
        ports:
          - containerPort: 8186
      volumes:
      - name: config
        configMap:
          name: telegraf-config
