k8s-practice-exercises/Helm/tick/manifests/service-chronograf.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
spec:
  selector:
    app: chronograf
  ports:
  - name: chronograf
    port: 8888
    targetPort: 8888
