k8s-practice-exercises/Helm/tick/manifests/service-influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  selector:
    app: influxdb
  ports:
  - name: influxdb
    port: 8086
    targetPort: 8086
