k8s-practice-exercises/Helm/tick/manifests/service-kapacitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: kapacitor
spec:
  selector:
    app: kapacitor
  ports:
  - name: kapacitor
    port: 9092
    targetPort: 9092
