k8s-practice-exercises/Helm/tick/manifests/service-telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
spec:
  selector:
    app: telegraf
  ports:
  - name: telegraf
    port: 8186
    targetPort: 8186
